# ISS_mimic_models

./: .gitignore  README.md  app.py  iss_model.py  location_predictor.py  main.py  power_predictor.py  pyproject.toml
templates/: index.html
