[project]
name = "iss-ml-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "joblib>=1.5.3",
    "kagglehub>=0.4.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "py-iss-telemetry>=1.2",
    "scikit-learn>=1.7.2",
    "setuptools>=80.9.0",
]
